syntax = "proto3";

option go_package = "calculator_service/proto";

service CalculatorService {
    rpc Add (AddRequest) returns (AddResponse);
    rpc Subtract (SubtractRequest) returns (SubtractResponse);
    rpc Multiply (MultiplyRequest) returns (MultiplyResponse);
    rpc Divide (DivideRequest) returns (DivideResponse);

    rpc Ping (PingRequest) returns (PingResponse);
}

message AddRequest {
    float a = 1;
    float b = 2;
}

message AddResponse {
    float result = 1;
}

message SubtractRequest {
    float a = 1;
    float b = 2;
}

message SubtractResponse {
    float result = 1;
}

message MultiplyRequest {
    float a = 1;
    float b = 2;
}

message MultiplyResponse {
    float result = 1;
}

message DivideRequest {
    float a = 1;
    float b = 2;
}

message DivideResponse {
    float result = 1;
}

message PingRequest {

}

message PingResponse {
    string message = 1;
}